[AF] Make wallet controllers for USS/Directory consistent

This CL makes the old Directory controller react to the toggle in
Payments methods as well.

Bug: 898141
Change-Id: I09918c9aace663376f7beb0ed0cd5f2ef3854b0e
Reviewed-on: https://chromium-review.googlesource.com/c/1296598
Commit-Queue: Jan Krcal <jkrcal@chromium.org>
Reviewed-by: Florian Uunk <feuunk@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#602272}(cherry picked from commit 5f9c856d51deba9f649c7374d93fcbc950c91404 [formerly 45399d3227c76eec24f57e98c2dfcdeb8378f12a])
Reviewed-on: https://chromium-review.googlesource.com/c/1299158
Cr-Commit-Position: refs/branch-heads/3578@{#317}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: f3ab510a8b63b9784cd14e71c92ba5ff31a9a1a4